--- a/gallery.html
+++ b/gallery.html
@@ -6,29 +6,105 @@
   <title>Galeri Azizah</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-white to-sky-50 font-sans">
-  <nav class="bg-white shadow p-4 flex justify-between items-center sticky top-0 z-50">
-    <h1 class="text-xl font-semibold">Azizah</h1>
-    <ul class="flex gap-6 text-gray-600">
-      <li><a href="index.html" class="hover:text-sky-600">Home</a></li>
-      <li><a href="about.html" class="hover:text-sky-600">About</a></li>
-      <li><a href="gallery.html" class="hover:text-sky-600">Gallery</a></li>
-      <li><a href="contact.html" class="hover:text-sky-600">Contact</a></li>
+<body class="flex flex-col min-h-screen bg-gradient-to-b from-sky-50 via-white to-sky-100 font-sans">
+  <!-- Navbar -->
+  <nav class="bg-white/80 backdrop-blur-md shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
+    <h1 class="text-2xl font-bold text-sky-600">Azizah</h1>
+    <ul class="flex gap-6 text-gray-700 font-medium">
+      <li><a href="index.html" class="hover:text-sky-600 transition">Home</a></li>
+      <li><a href="about.html" class="hover:text-sky-600 transition">About</a></li>
+      <li><a href="gallery.html" class="text-sky-600 font-semibold">Gallery</a></li>
+      <li><a href="contact.html" class="hover:text-sky-600 transition">Contact</a></li>
     </ul>
   </nav>
 
-  <section class="max-w-5xl mx-auto p-10">
-    <h2 class="text-3xl font-bold mb-6 text-center">Galeri Azizah</h2>
-<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
-  <img src="foto1.jpg" class="w-full aspect-[3/4] object-cover rounded-xl shadow hover:scale-105 transform transition" />
-  <img src="foto2.jpg" class="w-full aspect-[3/4] object-cover rounded-xl shadow hover:scale-105 transform transition" />
-  <img src="foto3.jpg" class="w-full aspect-[3/4] object-cover rounded-xl shadow hover:scale-105 transform transition" />
-  <img src="foto4.jpg" class="w-full aspect-[3/4] object-cover rounded-xl shadow hover:scale-105 transform transition" />
-</div>
+  <!-- Gallery Section -->
+  <main class="flex-grow">
+    <section class="max-w-6xl mx-auto px-6 py-16">
+      <h2 class="text-4xl font-bold text-center mb-10 text-gray-800">Galeri Azizah</h2>
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6">
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto1.jpg" alt="Azizah 1"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto2.jpg" alt="Azizah 2"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto3.jpg" alt="Azizah 3"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto4.jpg" alt="Azizah 4"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto7.jpg" alt="Azizah 5"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto8.jpg" alt="Azizah 6"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto9.jpg" alt="Azizah 7"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto10.jpg" alt="Azizah 8"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto11.jpg" alt="Azizah 9"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto12.jpg" alt="Azizah 10"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto13.jpg" alt="Azizah 11"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+        <div class="group overflow-hidden rounded-2xl shadow-lg">
+          <img src="foto14.jpg" alt="Azizah 12"
+            class="w-full aspect-[3/4] object-cover transform group-hover:scale-110 transition duration-500" />
+        </div>
+      </div>
+    </section>
+  </main>
 
-  </section>
+  <!-- Footer -->
+  <footer class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900 text-gray-300 py-10">
+    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+      <!-- Brand -->
+      <div>
+        <h3 class="text-white text-lg font-semibold mb-3">Azizah Indah Purnama Sari</h3>
+        <p class="text-sm leading-relaxed">Kumpulan momen dan potret terbaik dari Azizah.</p>
+      </div>
+      <!-- Links -->
+      <div>
+        <h4 class="text-white font-semibold mb-3">Navigasi</h4>
+        <ul class="space-y-2 text-sm">
+          <li><a href="index.html" class="hover:text-sky-400 transition">Home</a></li>
+          <li><a href="about.html" class="hover:text-sky-400 transition">About</a></li>
+          <li><a href="gallery.html" class="hover:text-sky-400 transition">Gallery</a></li>
+          <li><a href="contact.html" class="hover:text-sky-400 transition">Contact</a></li>
+        </ul>
+      </div>
+      <!-- Contact -->
+      <div>
+        <h4 class="text-white font-semibold mb-3">Kontak</h4>
+        <p class="text-sm">Email: <a href="mailto:azizah@example.com" class="hover:text-sky-400">azizah@example.com</a></p>
+        <p class="text-sm">Telp: <a href="https://wa.me/6281996472132" class="hover:text-sky-400">Whatsapp</a></p>
+      </div>
+    </div>
+    <div class="text-center text-xs text-gray-500 mt-10 border-t border-gray-700 pt-4">
+      © 2025 Azizah Indah Purnama Sari. All Rights Reserved.
+    </div>
+  </footer>
 
-  <footer class="text-center text-gray-400 py-6">© 2025 Dibuat oleh some people</footer>
   <script src="js/main.js"></script>
 </body>
 </html>
