--- a/about.html
+++ b/about.html
@@ -6,23 +6,81 @@
   <title>Tentang Azizah</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-white to-sky-50 font-sans">
-  <nav class="bg-white shadow p-4 flex justify-between items-center sticky top-0 z-50">
-    <h1 class="text-xl font-semibold">Azizah</h1>
-    <ul class="flex gap-6 text-gray-600">
-      <li><a href="index.html" class="hover:text-sky-600">Home</a></li>
-      <li><a href="about.html" class="hover:text-sky-600">About</a></li>
-      <li><a href="gallery.html" class="hover:text-sky-600">Gallery</a></li>
-      <li><a href="contact.html" class="hover:text-sky-600">Contact</a></li>
+<body class="bg-gradient-to-b from-sky-50 via-white to-sky-100 font-sans min-h-screen flex flex-col">
+  <!-- Navbar -->
+  <nav class="bg-white/80 backdrop-blur-md shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
+    <h1 class="text-2xl font-bold text-sky-600">Azizah</h1>
+    <ul class="flex gap-6 text-gray-700 font-medium">
+      <li><a href="index.html" class="hover:text-sky-600 transition">Home</a></li>
+      <li><a href="about.html" class="text-sky-600 font-semibold">About</a></li>
+      <li><a href="gallery.html" class="hover:text-sky-600 transition">Gallery</a></li>
+      <li><a href="contact.html" class="hover:text-sky-600 transition">Contact</a></li>
     </ul>
   </nav>
 
-  <section class="max-w-4xl mx-auto p-10">
-    <h2 class="text-3xl font-bold mb-4">Tentang Azizah</h2>
-    <p class="text-gray-600 leading-relaxed">Azizah Indah Purnama Sari adalah sosok dede gemes yang selalu bikin suasana ceria. Dengan senyuman yang manis dan hati yang baik, dia jadi inspirasi buat banyak orang. Website ini hadir sebagai bentuk apresiasi sederhana.</p>
+  <!-- About Section -->
+  <section class="flex-grow">
+    <div class="max-w-6xl mx-auto px-6 py-16 grid md:grid-cols-2 gap-10 items-center">
+      <div class="flex justify-center">
+        <img src="foto6.jpg" alt="Azizah"
+          class="rounded-2xl shadow-xl border-4 border-sky-200 object-cover hover:scale-105 transform transition duration-500">
+      </div>
+      <div>
+        <h2 class="text-4xl font-bold text-gray-800 mb-4">Tentang Azizah</h2>
+        <p class="text-lg text-gray-600 leading-relaxed mb-4">
+          Azizah Indah Purnama Sari adalah Anak kecil yang selalu bikin suasana ceria.
+          Dengan senyuman manis dan hati yang baik, dia jadi inspirasi buat banyak orang di sekitarnya.
+        </p>
+        <p class="text-lg text-gray-600 leading-relaxed mb-6">
+          Website ini hadir sebagai bentuk apresiasi sederhana, untuk mengenal lebih dekat sosok Azizah.
+        </p>
+
+        <!-- Biodata -->
+        <div class="bg-white shadow-md rounded-xl p-6 border border-sky-100">
+          <h3 class="text-2xl font-semibold text-sky-600 mb-4">Biodata</h3>
+          <ul class="space-y-2 text-gray-700">
+            <li><span class="font-medium">Nama:</span> Azizah Indah Purnama Sari</li>
+            <li><span class="font-medium">Tanggal Lahir:</span> 23 Juli 2010</li>
+            <li><span class="font-medium">Tinggi:</span> 154 cm</li>
+            <li><span class="font-medium">Alamat:</span> Jalan Sukamulya 3, kemayoran, jakarta pusat</li>
+            <li><span class="font-medium">Hobi:</span> Bernyanyi</li>
+            <li><span class="font-medium">Pengalaman:</span> Menjadi anggota di organisasi Pramuka inti</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <footer class="text-center text-gray-400 py-6">© 2025 Dibuat oleh some people</footer>
+  <!-- Footer -->
+  <footer class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900 text-gray-300 py-10">
+    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+      <!-- Brand -->
+      <div>
+        <h3 class="text-white text-lg font-semibold mb-3">Azizah Indah Purnama Sari</h3>
+        <p class="text-sm leading-relaxed">Website personal yang berisi informasi, galeri, dan kontak resmi.</p>
+      </div>
+      <!-- Links -->
+      <div>
+        <h4 class="text-white font-semibold mb-3">Navigasi</h4>
+        <ul class="space-y-2 text-sm">
+          <li><a href="index.html" class="hover:text-sky-400 transition">Home</a></li>
+          <li><a href="about.html" class="hover:text-sky-400 transition">About</a></li>
+          <li><a href="gallery.html" class="hover:text-sky-400 transition">Gallery</a></li>
+          <li><a href="contact.html" class="hover:text-sky-400 transition">Contact</a></li>
+        </ul>
+      </div>
+      <!-- Contact -->
+      <div>
+        <h4 class="text-white font-semibold mb-3">Kontak</h4>
+        <p class="text-sm">Email: <a href="mailto:azizah@example.com" class="hover:text-sky-400">azizah@example.com</a></p>
+        <p class="text-sm">Telp: <a href="https://wa.me/6281996472132" class="hover:text-sky-400">+62 819-9647-2132</a></p>
+      </div>
+    </div>
+    <div class="text-center text-xs text-gray-500 mt-10 border-t border-gray-700 pt-4">
+      © 2025 Azizah Indah Purnama Sari. All Rights Reserved.
+    </div>
+  </footer>
+
   <script src="js/main.js"></script>
 </body>
 </html>
