--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           Azizah Indah <br class="hidden md:block"/> Purnama Sari
         </h2>
         <p class="text-lg text-gray-600 mb-6">Bocah tengil yang selalu bawa vibe positif buat orang-orang sekitarnya ✨.</p>
-        <a href="about.html" class="bg-sky-600 hover:bg-pink-700 text-white px-6 py-3 rounded-xl font-semibold shadow-lg transition transform hover:scale-105">
+        <a href="about.html" class="bg-pink-600 hover:bg-pink-700 text-white px-6 py-3 rounded-xl font-semibold shadow-lg transition transform hover:scale-105">
           Kenal Lebih Dekat
         </a>
       </div>
@@ -76,4 +76,5 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
