--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <title>Azizah Indah Purnama Sari</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-white to-sky-50 font-sans text-gray-800">
+<body class="bg-gradient-to-b from-white to-pink-50 font-sans text-gray-800">
   <!-- Navbar -->
   <nav class="bg-white shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
-    <h1 class="text-2xl font-bold text-sky-600">Azizah</h1>
+    <h1 class="text-2xl font-bold text-pink-600">Azizah</h1>
     <ul class="flex gap-6 text-gray-700 font-medium">
-      <li><a href="index.html" class="hover:text-sky-600 transition">Home</a></li>
-      <li><a href="about.html" class="hover:text-sky-600 transition">About</a></li>
-      <li><a href="gallery.html" class="hover:text-sky-600 transition">Gallery</a></li>
-      <li><a href="contact.html" class="hover:text-sky-600 transition">Contact</a></li>
+      <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+      <li><a href="about.html" class="hover:text-pink-600 transition">About</a></li>
+      <li><a href="gallery.html" class="hover:text-pink-600 transition">Gallery</a></li>
+      <li><a href="contact.html" class="hover:text-pink-600 transition">Contact</a></li>
     </ul>
   </nav>
 
   <!-- Hero Section -->
   <section class="relative overflow-hidden">
-    <div class="absolute inset-0 bg-gradient-to-r from-sky-100 via-white to-indigo-50"></div>
+    <div class="absolute inset-0 bg-gradient-to-r from-pink-100 via-white to-pink-50"></div>
     <div class="relative max-w-6xl mx-auto px-6 py-20 grid md:grid-cols-2 gap-10 items-center">
       <div class="text-center md:text-left">
         <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4 leading-tight">
@@ -32,13 +32,13 @@
         </a>
       </div>
       <div class="flex justify-center md:justify-end">
-        <img src="foto5.jpg" alt="Azizah" class="rounded-full shadow-xl border-4 border-sky-200 w-72 h-72 object-cover hover:scale-105 transform transition">
+        <img src="foto5.jpg" alt="Azizah" class="rounded-full shadow-xl border-4 border-pink-200 w-72 h-72 object-cover hover:scale-105 transform transition">
       </div>
     </div>
   </section>
 
   <!-- Footer Aesthetic -->
-  <footer class="bg-gradient-to-r from-sky-700 to-indigo-800 text-gray-200 py-12 mt-16">
+  <footer class="bg-gradient-to-r from-pink-700 to-pink-800 text-gray-200 py-12 mt-16">
     <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-10">
       <!-- Branding -->
       <div>
@@ -76,5 +76,3 @@
   <script src="js/main.js"></script>
 </body>
 </html>
-
-
