--- a/gallery.html
+++ b/gallery.html
@@ -6,15 +6,15 @@
   <title>Galeri Azizah</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex flex-col min-h-screen bg-gradient-to-b from-sky-50 via-white to-sky-100 font-sans">
+<body class="flex flex-col min-h-screen bg-gradient-to-b from-pink-50 via-white to-pink-100 font-sans">
   <!-- Navbar -->
   <nav class="bg-white/80 backdrop-blur-md shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
-    <h1 class="text-2xl font-bold text-sky-600">Azizah</h1>
+    <h1 class="text-2xl font-bold text-pink-600">Azizah</h1>
     <ul class="flex gap-6 text-gray-700 font-medium">
-      <li><a href="index.html" class="hover:text-sky-600 transition">Home</a></li>
-      <li><a href="about.html" class="hover:text-sky-600 transition">About</a></li>
-      <li><a href="gallery.html" class="text-sky-600 font-semibold">Gallery</a></li>
-      <li><a href="contact.html" class="hover:text-sky-600 transition">Contact</a></li>
+      <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+      <li><a href="about.html" class="hover:text-pink-600 transition">About</a></li>
+      <li><a href="gallery.html" class="text-pink-600 font-semibold">Gallery</a></li>
+      <li><a href="contact.html" class="hover:text-pink-600 transition">Contact</a></li>
     </ul>
   </nav>
 
@@ -87,17 +87,17 @@
       <div>
         <h4 class="text-white font-semibold mb-3">Navigasi</h4>
         <ul class="space-y-2 text-sm">
-          <li><a href="index.html" class="hover:text-sky-400 transition">Home</a></li>
-          <li><a href="about.html" class="hover:text-sky-400 transition">About</a></li>
-          <li><a href="gallery.html" class="hover:text-sky-400 transition">Gallery</a></li>
-          <li><a href="contact.html" class="hover:text-sky-400 transition">Contact</a></li>
+          <li><a href="index.html" class="hover:text-pink-400 transition">Home</a></li>
+          <li><a href="about.html" class="hover:text-pink-400 transition">About</a></li>
+          <li><a href="gallery.html" class="hover:text-pink-400 transition">Gallery</a></li>
+          <li><a href="contact.html" class="hover:text-pink-400 transition">Contact</a></li>
         </ul>
       </div>
       <!-- Contact -->
       <div>
         <h4 class="text-white font-semibold mb-3">Kontak</h4>
-        <p class="text-sm">Email: <a href="mailto:azizah@example.com" class="hover:text-sky-400">azizah@example.com</a></p>
-        <p class="text-sm">Telp: <a href="https://wa.me/6281996472132" class="hover:text-sky-400">Whatsapp</a></p>
+        <p class="text-sm">Email: <a href="mailto:azizah@example.com" class="hover:text-pink-400">azizah@example.com</a></p>
+        <p class="text-sm">Telp: <a href="https://wa.me/6281996472132" class="hover:text-pink-400">Whatsapp</a></p>
       </div>
     </div>
     <div class="text-center text-xs text-gray-500 mt-10 border-t border-gray-700 pt-4">
