--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gradient-to-r from-pink-400 via-pink-500 to-white text-gray-800 py-10">
+  <footer class="bg-gradient-to-r from-pink-700 to-pink-800 text-gray-200 py-12 mt-16">
     <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
       <!-- Brand -->
       <div>
@@ -108,3 +108,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
