--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,35 @@
   </section>
 
   <!-- Footer -->
-  <footer class="text-center text-gray-400 py-6 mt-auto">
-    © 2025 Dibuat oleh some people
+  <footer class="bg-gradient-to-r from-pink-700 to-pink-800 text-gray-200 py-12 mt-16">
+    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+      <!-- Brand -->
+      <div>
+        <h3 class="text-pink-700 text-lg font-semibold mb-3">Azizah Indah Purnama Sari</h3>
+        <p class="text-sm leading-relaxed text-gray-700">Kumpulan momen dan potret terbaik dari Azizah.</p>
+      </div>
+      <!-- Links -->
+      <div>
+        <h4 class="text-pink-700 font-semibold mb-3">Navigasi</h4>
+        <ul class="space-y-2 text-sm">
+          <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+          <li><a href="about.html" class="hover:text-pink-600 transition">About</a></li>
+          <li><a href="gallery.html" class="hover:text-pink-600 transition">Gallery</a></li>
+          <li><a href="contact.html" class="hover:text-pink-600 transition">Contact</a></li>
+        </ul>
+      </div>
+      <!-- Contact -->
+      <div>
+        <h4 class="text-pink-700 font-semibold mb-3">Kontak</h4>
+        <p class="text-sm">Email: <a href="mailto:azizah@example.com" class="hover:text-pink-600">azizah@example.com</a></p>
+        <p class="text-sm">Telp: <a href="https://wa.me/6281996472132" class="hover:text-pink-600">Whatsapp</a></p>
+      </div>
+    </div>
+    <div class="text-center text-xs text-pink-700 mt-10 border-t border-pink-300 pt-4">
+      © 2025 Azizah Indah Purnama Sari. All Rights Reserved.
+    </div>
   </footer>
-
   <script src="js/main.js"></script>
 </body>
 </html>
+
