--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body class="bg-gradient-to-b from-white to-pink-50 font-sans text-gray-800">
   <!-- Navbar -->
-  <nav class="bg-white shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
+  <nav class="bg-white/80 backdrop-blur-md shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
     <h1 class="text-2xl font-bold text-pink-600">Azizah</h1>
     <ul class="flex gap-6 text-gray-700 font-medium">
-      <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+      <li><a href="index.html" class="text-pink-600 font-semibold">Home</a></li>
       <li><a href="about.html" class="hover:text-pink-600 transition">About</a></li>
       <li><a href="gallery.html" class="hover:text-pink-600 transition">Gallery</a></li>
       <li><a href="contact.html" class="hover:text-pink-600 transition">Contact</a></li>
@@ -76,3 +76,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
