--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 <body class="bg-gradient-to-b from-white to-sky-50 font-sans min-h-screen flex flex-col">
 
   <!-- Navbar -->
-  <nav class="bg-white shadow p-4 flex justify-between items-center sticky top-0 z-50">
-    <h1 class="text-xl font-semibold">Azizah</h1>
-    <ul class="flex gap-6 text-gray-600">
-      <li><a href="index.html" class="hover:text-sky-600">Home</a></li>
-      <li><a href="about.html" class="hover:text-sky-600">About</a></li>
-      <li><a href="gallery.html" class="hover:text-sky-600">Gallery</a></li>
-      <li><a href="contact.html" class="hover:text-sky-600">Contact</a></li>
+  <nav class="bg-white/80 backdrop-blur-md shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
+    <h1 class="text-2xl font-bold text-pink-600">Azizah</h1>
+    <ul class="flex gap-6 text-gray-700 font-medium">
+      <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+      <li><a href="about.html" class="hover:text-pink-600 transition">About</a></li>
+      <li><a href="gallery.html" class="hover:text-pink-600 transition ">Gallery</a></li>
+      <li><a href="contact.html" class="text-pink-600 font-semibold">Contact</a></li>
     </ul>
   </nav>
 
@@ -70,5 +70,6 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
