--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
   <title>Tentang Azizah</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-sky-50 via-white to-sky-100 font-sans min-h-screen flex flex-col">
+<body class="bg-gradient-to-b from-pink-50 via-white to-pink-100 font-sans min-h-screen flex flex-col">
   <!-- Navbar -->
   <nav class="bg-white/80 backdrop-blur-md shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-50">
-    <h1 class="text-2xl font-bold text-sky-600">Azizah</h1>
+    <h1 class="text-2xl font-bold text-pink-600">Azizah</h1>
     <ul class="flex gap-6 text-gray-700 font-medium">
-      <li><a href="index.html" class="hover:text-sky-600 transition">Home</a></li>
-      <li><a href="about.html" class="text-sky-600 font-semibold">About</a></li>
-      <li><a href="gallery.html" class="hover:text-sky-600 transition">Gallery</a></li>
-      <li><a href="contact.html" class="hover:text-sky-600 transition">Contact</a></li>
+      <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+      <li><a href="about.html" class="text-pink-600 font-semibold">About</a></li>
+      <li><a href="gallery.html" class="hover:text-pink-600 transition">Gallery</a></li>
+      <li><a href="contact.html" class="hover:text-pink-600 transition">Contact</a></li>
     </ul>
   </nav>
 
@@ -23,7 +23,7 @@
     <div class="max-w-6xl mx-auto px-6 py-16 grid md:grid-cols-2 gap-10 items-center">
       <div class="flex justify-center">
         <img src="foto6.jpg" alt="Azizah"
-          class="rounded-2xl shadow-xl border-4 border-sky-200 object-cover hover:scale-105 transform transition duration-500">
+          class="rounded-2xl shadow-xl border-4 border-pink-200 object-cover hover:scale-105 transform transition duration-500">
       </div>
       <div>
         <h2 class="text-4xl font-bold text-gray-800 mb-4">Tentang Azizah</h2>
@@ -36,13 +36,13 @@
         </p>
 
         <!-- Biodata -->
-        <div class="bg-white shadow-md rounded-xl p-6 border border-sky-100">
-          <h3 class="text-2xl font-semibold text-sky-600 mb-4">Biodata</h3>
+        <div class="bg-white shadow-md rounded-xl p-6 border border-pink-100">
+          <h3 class="text-2xl font-semibold text-pink-600 mb-4">Biodata</h3>
           <ul class="space-y-2 text-gray-700">
             <li><span class="font-medium">Nama:</span> Azizah Indah Purnama Sari</li>
             <li><span class="font-medium">Tanggal Lahir:</span> 23 Juli 2010</li>
             <li><span class="font-medium">Tinggi:</span> 154 cm</li>
-            <li><span class="font-medium">Alamat:</span> Jalan Sukamulya 3, kemayoran, jakarta pusat</li>
+            <li><span class="font-medium">Alamat:</span> Jalan Sukamulya 3, Kemayoran, Jakarta Pusat</li>
             <li><span class="font-medium">Hobi:</span> Bernyanyi</li>
             <li><span class="font-medium">Pengalaman:</span> Menjadi anggota di organisasi Pramuka inti</li>
           </ul>
@@ -52,37 +52,31 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gradient-to-r from-pink-700 to-pink-800 text-gray-200 py-12 mt-16">
-    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-10">
-      <!-- Branding -->
+  <footer class="bg-gradient-to-r from-pink-400 via-pink-500 to-white text-gray-800 py-10">
+    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+      <!-- Brand -->
       <div>
-        <h3 class="text-white text-lg font-semibold mb-3">Azizah Indah Purnama Sari</h3>
-        <p class="text-sm leading-relaxed opacity-90">Website personal berisi informasi, galeri, dan kontak resmi.</p>
+        <h3 class="text-pink-700 text-lg font-semibold mb-3">Azizah Indah Purnama Sari</h3>
+        <p class="text-sm leading-relaxed text-gray-700">Website personal yang berisi informasi, galeri, dan kontak resmi.</p>
       </div>
       <!-- Links -->
       <div>
-        <h4 class="text-white font-semibold mb-3">Navigasi</h4>
+        <h4 class="text-pink-700 font-semibold mb-3">Navigasi</h4>
         <ul class="space-y-2 text-sm">
-          <li><a href="index.html" class="hover:text-white transition">Home</a></li>
-          <li><a href="about.html" class="hover:text-white transition">About</a></li>
-          <li><a href="gallery.html" class="hover:text-white transition">Gallery</a></li>
-          <li><a href="contact.html" class="hover:text-white transition">Contact</a></li>
+          <li><a href="index.html" class="hover:text-pink-600 transition">Home</a></li>
+          <li><a href="about.html" class="hover:text-pink-600 transition">About</a></li>
+          <li><a href="gallery.html" class="hover:text-pink-600 transition">Gallery</a></li>
+          <li><a href="contact.html" class="hover:text-pink-600 transition">Contact</a></li>
         </ul>
       </div>
       <!-- Contact -->
       <div>
-        <h4 class="text-white font-semibold mb-3">Kontak</h4>
-        <p class="text-sm flex items-center gap-2">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M2 4.5A2.5 2.5 0 014.5 2h15A2.5 2.5 0 0122 4.5v15a2.5 2.5 0 01-2.5 2.5h-15A2.5 2.5 0 012 19.5v-15zM4 6.75v10.5l6.5-5.25L4 6.75zm16 0l-6.5 5.25L20 17.25V6.75zM5.34 5h13.32L12 10.25 5.34 5z"/></svg>
-          <a href="mailto:azizah@example.com" class="hover:text-white">azizah@example.com</a>
-        </p>
-        <p class="text-sm flex items-center gap-2 mt-2">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M6.62 10.79a15.464 15.464 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57.55 0 1 .45 1 1V20a1 1 0 01-1 1C10.61 21 3 13.39 3 4a1 1 0 011-1h3.5c.55 0 1 .45 1 1 0 1.21.2 2.42.57 3.54.14.38.05.81-.24 1.05l-2.21 2.2z"/></svg>
-          <a href="https://wa.me/6281996472132" target="_blank" class="hover:text-white">+62 819-9647-2132</a>
-        </p>
+        <h4 class="text-pink-700 font-semibold mb-3">Kontak</h4>
+        <p class="text-sm">Email: <a href="mailto:azizah@example.com" class="hover:text-pink-600">azizah@example.com</a></p>
+        <p class="text-sm">Telp: <a href="https://wa.me/6281996472132" class="hover:text-pink-600">+62 819-9647-2132</a></p>
       </div>
     </div>
-    <div class="text-center text-xs text-gray-400 mt-12 border-t border-gray-700 pt-4">
+    <div class="text-center text-xs text-pink-700 mt-10 border-t border-pink-300 pt-4">
       © 2025 Azizah Indah Purnama Sari. All Rights Reserved.
     </div>
   </footer>
@@ -90,5 +84,3 @@
   <script src="js/main.js"></script>
 </body>
 </html>
-
-
